# acm

./: .gitignore  A  CMakeLists.txt  a.out  a.py  dbg.hpp  error.txt  go.mod  go_build_a_go  input.txt  main.cpp  main.go  out.txt  output.txt  ttt.cpp  对拍器.cpp
.cph/: .1829F.cpp_8c7f05fe0c76ef500c9c5c738488c40c.prob
Codeforces/: a.cpp  b.cpp  d.cpp  e.cpp  f.cpp
Leetcode/: 1.cpp  1.两数之和.cpp  2.cpp  2136.earliest-possible-day-of-full-bloom.cpp  3.cpp  4.cpp  CMakeLists.txt  leetcode.h  main.cpp
Luogu/: Luogu_P_1177.cpp  Luogu_P_1271.cpp  P_1003_NOIP_2011_提高组_铺地毯.cpp  P_1012_NOIP_1998_提高组_拼数.cpp  P_1014_NOIP_1999_普及组_Cantor_表.cpp  P_1025_NOIP_2001_提高组_数的划分.cpp  P_1028_NOIP_2001_普及组_数的计算.cpp  P_1035_NOIP_2002_普及组_级数求和.cpp  P_1036_NOIP_2002_普及组_选数.cpp  P_1042_NOIP_2003_普及组_乒乓球.cpp  P_1046_NOIP_2005_普及组_陶陶摘苹果.cpp  P_1047_NOIP_2005_普及组_校门外的树.cpp  P_1055_NOIP_2008_普及组_ISBN_号码.cpp  P_1059_NOIP_2006_普及组_明明的随机数.go  P_1067_NOIP_2009_普及组_多项式输出.cpp  P_1068_NOIP_2009_普及组_分数线划定.go  P_1085_NOIP_2004_普及组_不高兴的津津.cpp  P_1089_NOIP_2004_提高组_津津的储蓄计划.cpp  P_1177_模板_排序.cpp  P_1177_模板_排序.go  P_1179_NOIP_2010_普及组_数字统计.cpp  P_1192_台阶问题.cpp  P_1307_NOIP_2011_普及组_数字反转.cpp  P_1308_NOIP_2011_普及组_统计单词数.cpp  P_1328_NOIP_2014_提高组_生活大爆炸版石头剪刀布.cpp  P_1427_小鱼的数字游戏.cpp  P_1464_Function.cpp  P_1563_NOIP_2016_提高组_玩具谜题.cpp  P_1909_NOIP_2016_普及组_买铅笔.cpp  P_1980_NOIP_2013_普及组_计数问题.cpp  P_2010_NOIP_2016_普及组_回文日期.cpp  P_2141_NOIP_2014_普及组_珠心算测验.cpp  P_2615_NOIP_2015_提高组_神奇的幻方.cpp  P_4994_终于结束的起点.cpp  P_5015_NOIP_2018_普及组_标题统计.cpp  P_5534_XR_3_等差数列.cpp  P_5587_打字练习.cpp  P_5594_XR_4_模拟赛.cpp  a  b  (+1 more)
algorithm_template/: Byte_alignment.cpp  C_functions.cpp  JiuR.cpp  JiuR.go  LFU.cpp  OnlyStatic_or_Onlynew.cpp  Scnner.h  (+9 more)
(+480 files in other folders)
